config/5-Ingress/2-Ingress-Service.yaml
apiVersion: v1
kind: Service
metadata:
 name: ingress-service
 namespace: ingress-nginx
 annotations:
  metallb.universe.tf/address-pool: default
spec:
 type: LoadBalancer
 ports:
 - name: service
   port: 80
   targetPort: 80
 selector:
  app.kubernetes.io/name: ingress-nginx
  app.kubernetes.io/part-of: ingress-nginx
