config/5-Ingress/1-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: nginx-ingress
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - http:
    paths:
    - path: /service
      backend:
       serviceName: was-cs
       servicePort: 8080
    - path: /
      backend:
       serviceName: was-main
       servicePort: 8080
